Added Yield Info Activity
Added an activity explaining what yield percentage is and made a button
for it in NewIngredient. Also update string resource.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,36 +15,41 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Credits"
+        <activity
+            android:name=".Credits"
             android:label="Credits"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".SelectedRecipe"
+        <activity
+            android:name=".SelectedRecipe"
             android:label="View Recipe"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".IngredientDatabase"
+        <activity
+            android:name=".IngredientDatabase"
             android:label="Pantry"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".NewIngredient"
+        <activity
+            android:name=".NewIngredient"
             android:label="Add Ingredient to Pantry"
             android:parentActivityName=".IngredientDatabase"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".NewRecipe"
+        <activity
+            android:name=".NewRecipe"
             android:label="Create New Recipe"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".AddToRecipe"
+        <activity
+            android:name=".AddToRecipe"
             android:label="Add Ingredient to Recipe"
             android:parentActivityName=".NewRecipe"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".YieldInfo"
+            android:label="What is 'Yield'?"
+            android:parentActivityName=".NewIngredient"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
