Added Edit Ingredient Activity
Added the activity and fixed an error in a string-array for a spinner
that was causing a bug in the calculations for half-gallons.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,8 +47,11 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".YieldInfo"
-            android:label="What is 'Yield'?"
-            android:parentActivityName=".NewIngredient"
+            android:label="What is &apos;Yield&apos;?"
+            android:screenOrientation="portrait" />
+        <activity android:name=".EditIngredient"
+            android:label="Edit Ingredient"
+            android:parentActivityName=".IngredientDatabase"
             android:screenOrientation="portrait" />
     </application>
 
